<resources>
    <string name="app_name">GADS Practice Project</string>
    <string name="learning_leaders_text">Learning Leaders</string>
    <string name="skill_iq_leaders_text">Skill IQ Leaders</string>
    <string name="submit_text">Submit</string>
    <string name="leaderboard_text">LEADERBOARD</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB(link)</string>
    <string name="project_submission">Project Submission</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="back_button">back button</string>
    <string name="gads_logo">gads Logo</string>
</resources>